--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -13,8 +13,9 @@ font-family: 'Libre Baskerville', serif;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 80px;
 }
 .position-submit{
   margin-left: 5px;
-  height: 50px
+  height: 50px;  
 }
