--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -26,3 +26,19 @@ font-family: 'Libre Baskerville', serif;
   margin-top: 50px;
   margin-bottom: 5px;
 }
+.disponivel, .pendente, .indisponivel{
+  display: inline-block;
+  color: #fff;
+  padding-right: 3px;
+  border-radius: 7%;
+  padding-left: 3px;
+}
+.disponivel{
+  background-color: green;
+}
+.pendente{
+  background-color: orange;
+}
+.indisponivel{
+  background-color: red;
+}
