--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -39,7 +39,7 @@ font-family: 'Libre Baskerville', serif;
   background-color: green;
 }
 .pendente{
-  background-color: orange;
+  background-color: #FF4500;
 }
 .indisponivel{
   background-color: red;
