--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -28,6 +28,7 @@ h2 {
 
 .well {
   height: 300px;
+    border: 2px solid #d3e0e9;  
 }
 
 .progress {
@@ -53,4 +54,10 @@ h2 {
 
 .indisponivel {
   background-color: red;
+}
+.style-icons{
+  color: #2a88bd;
+  border: 3px solid #2a88bd;
+  padding: 3px;
+  margin-left: 5px;
 }
