--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -78,3 +78,16 @@ h2 {
   font-size: 40px;
 
 }
+
+@media screen and (max-width: 420px){
+
+.well{
+  height: 350px;
+}
+}
+@media screen and (max-width: 768px) and (min-width: 421px){
+
+.well{
+  height: 350px;
+}
+}
