--- a/public/css/style-user-show.css
+++ b/public/css/style-user-show.css
@@ -3,12 +3,23 @@ body{
   padding: 0;
 }
 
-.perfil-circle{
-width: 150px;
-height: 150px;
+.well{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  height: 150px;
+  margin-top: 5px;
 }
+
 .letra-perfil{
   color: #fff;
-  font-size: 13em;
-
+  font-size: 12em;
+}
+.chat{
+  border-radius: 5%;
+  color: #fff;
+  display: inline-block;
+  background-color: green;
+  padding: 3px 5px 3px 5px;
 }
