--- a/public/css/style-user-show.css
+++ b/public/css/style-user-show.css
@@ -3,6 +3,9 @@ body{
   padding: 0;
 }
 
+p, h2{
+  font-family: 'Roboto', sans-serif;
+}
 .well{
   display: flex;
   align-items: center;
@@ -26,4 +29,5 @@ body{
 .nenhum-historico{
   margin-top: 100px;
   font-size: 3em;
+  font-family: 'Amatic SC', cursive;
 }
