--- a/public/css/style-request-show.css
+++ b/public/css/style-request-show.css
@@ -1,14 +1,18 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
 
-.well{
+.well {
   margin-top: 80px;
-    border: 2px solid #d3e0e9;
-    
+  border: 2px solid #d3e0e9;
 }
-.text-center{
-  margin-top: 5px;
 
+.text-center {
+  margin-top: 0;
+  margin-top: 0;
+}
+
+.status{
+  margin-bottom: 10px;
 }
