--- a/public/css/style-user-show.css
+++ b/public/css/style-user-show.css
@@ -6,6 +6,11 @@ body{
 p, h2{
   font-family: 'Roboto', sans-serif;
 }
+.btn{
+  width: 150px;
+  margin-bottom: 10px;
+}
+
 .well{
   display: flex;
   align-items: center;
