--- a/public/css/style-call-vue.css
+++ b/public/css/style-call-vue.css
@@ -1,8 +1,21 @@
+
 body{
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
+	  font-family: 'Roboto', sans-serif;
 }
 
-h1{
-  color: red;
+.well-perfil{
+	width: 120px;
+	height: 120px;
+	border-radius: 100%;
+}
+.well-chat{
+	margin-top: 70px;
+	height: 400px;
+	overflow: auto;
+
+}
+.well-assunto{
+
 }
