font erros alterada

--- a/public/css/style-erros.css
+++ b/public/css/style-erros.css
@@ -2,11 +2,12 @@ body{
   margin: 0;
   padding: 0;
   background-color: #fff;
-  font-family: 'Roboto Slab', serif;
+
 
 }
 .position{
-  margin-top: 200PX;
+  margin-top: 200px;
+    font-family: 'Roboto Slab', serif;
 }
 .text{
   font-size: 2em;
