add color #fff em algumas paginas

--- a/public/css/style-call-vue.css
+++ b/public/css/style-call-vue.css
@@ -20,6 +20,7 @@ body {
 
 .well-pessoa {
   margin-top: 25px;
+  background-color: #fff;
 }
 
 /*chat*/
@@ -40,11 +41,11 @@ body {
   margin-top: 25px;
 	height: 430px;
 	overflow: auto;
+  background-color: #fff;
 }
 
-.user-assunto {
-  margin-top: 0;
-  margin-bottom: 20px;
+.user-assunto {  
+  font-size: 14px;
 
 }
 
@@ -54,7 +55,7 @@ body {
 
 }
 .text-assunto:hover{
-  background-color: pink;
+
 }
 
 #teste{
