--- a/public/css/style-call-vue.css
+++ b/public/css/style-call-vue.css
@@ -8,7 +8,7 @@ body {
 /*pessoas relacionadas*/
 
 .user-relacionado {
-  
+
 }
 
 .well-perfil {
@@ -38,7 +38,7 @@ body {
 /*assunto*/
 .well-assunto {
   margin-top: 25px;
-	height: 430px;
+	height: 500px;
 	overflow: auto;
   background-color: #fff;
 }
@@ -60,4 +60,8 @@ body {
 #teste{
 margin-top: 15px;
 
+}
+.well-pessoa{
+  height: 500px;
+  overflow: auto;
 }
