--- a/public/css/style-user-index.css
+++ b/public/css/style-user-index.css
@@ -6,6 +6,10 @@ body{
 a:hover{
   text-decoration: none;
 }
-li{
-  list-style: nome;
+.well{
+  background-color: #ffffff;
+}
+.user{
+  font-size: 20px;
+  color: #636b6f;
 }
