--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -81,6 +81,9 @@ h2 {
   margin-right: 10px;
   font-size: 40px;
 }
+.footer{
+  margin-top: 30px;
+}
 
 @media screen and (max-width: 420px) {
   .well {
