--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -1,17 +1,11 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #ffffff;
 }
 
 h2 {
   margin-top: 10px;
-}
-
-.input-date {
-  width: 400px;
-  height: 50px;
-  font-size: 35px;
-  font-family: 'Libre Baskerville', serif;
 }
 
 .position-form {
@@ -34,7 +28,6 @@ h2 {
 }
 
 .well {
-  height: 300px;
   border: 2px solid #d3e0e9;
 }
 
@@ -85,14 +78,65 @@ h2 {
   margin-top: 30px;
 }
 
-@media screen and (max-width: 420px) {
+
+
+/*Small*/
+
+@media screen and (max-width: 767px) {
   .well {
-    height: 350px;
+    height: 310px;
+  }
+  .input-date {
+    width: 250px;
+    height: 40px;
+    font-size: 30px;
+    font-family: 'Libre Baskerville', serif;
   }
 }
 
-@media screen and (max-width: 768px) and (min-width: 421px) {
+/*Tablet*/
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .well {
-    height: 350px;
+    height: 310px;
+  }
+  .input-date {
+    width: 400px;
+    height: 50px;
+    font-size: 35px;
+    font-family: 'Libre Baskerville', serif;
+  }
+
+
+}
+
+/*Computer*/
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .well {
+    height: 310px;
+    font-family: 'Muli', sans-serif;
+  }
+  .input-date {
+    width: 400px;
+    height: 50px;
+    font-size: 35px;
+    font-family: 'Libre Baskerville', serif;
+  }
+}
+
+/* > Computer*/
+
+@media screen and (min-width: 1200px) {
+  .well {
+    height: 310px;
+  font-family: 'Muli', sans-serif;
+  }
+  .input-date {
+
+    width: 400px;
+    height: 50px;
+    font-size: 35px;
+    font-family: 'Libre Baskerville', serif;
   }
 }
