erro complito no css entre show e index

--- a/public/css/style-request-status-update.css
+++ b/public/css/style-request-status-update.css
@@ -13,7 +13,7 @@
   color: #fff;
   text-decoration: none;
 }
-.btn-aceita, .btn-rejeitado, .btn-pendurado{
+.b-aceita, .b-rejeitado, .b-pendurado{
   margin-top: 15px;
   margin-right: 25px;
   margin-bottom: 10px;
