--- a/public/css/style-callmember-vue.css
+++ b/public/css/style-callmember-vue.css
@@ -4,16 +4,17 @@ body{
 }
 
 .letra-perfil-member{
-  margin-top: -7px;
+  padding-top: 7px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 #letra{
   color: #fff;
-  font-size: 1.5em;
+  font-size: 1em;
 }
 h5{
   margin-bottom: 3px;
-  font-size: 1.5em;
+  font-size: 12px;
+  
 }
