--- a/public/css/style-call-vue.css
+++ b/public/css/style-call-vue.css
@@ -64,6 +64,7 @@ margin-top: 15px;
 .well-pessoa{
   height: 500px;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 
@@ -85,9 +86,10 @@ margin-top: 15px;
 @media screen and (min-width: 992px) and (max-width: 1200px) {
   /*pessoas relacionadas*/
   .well-perfil {
-    border-radius: 100%;
+    border-radius: 7%;
     width: 40px;
     height: 40px;
+    margin-bottom: 12px;
   }
 
   .well-pessoa {
@@ -101,16 +103,14 @@ margin-top: 15px;
 @media screen and (min-width: 1200px) {
   /*pessoas relacionadas*/
   .well-perfil {
-
+    border-radius: 7%;
     width: 40px;
     height: 40px;
-
-
+    margin-bottom: 12px;
   }
 
   .well-pessoa {
 
     background-color: #fff;
   }
-}
 }
