add icon app.blade.php e alteração no arquivo app.css

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,9 @@
  */
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-
+.icon{
+  float: right;
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -8349,4 +8351,3 @@ button.close {
     display: none !important;
   }
 }
-
