--- a/public/css/style-request-status-update-show.css
+++ b/public/css/style-request-status-update-show.css
@@ -1,3 +1,21 @@
-.aceito, .pendente, .rejeitado{
-  
+.btn-aceita{
+  background-color: green;
+  color: #fff;
+  text-decoration: none;
+}
+.btn-rejeitado{
+  background-color: red;
+  color: #fff;
+  text-decoration: none;
+}
+.btn-pendurado{
+  background-color: #FF8C00;
+  color: #fff;
+  text-decoration: none;
+}
+.b-aceita, .b-rejeitado, .b-pendurado{
+
+}
+.btn-aceita:hover, .btn-rejeitado:hover, .btn-pendurado{
+  color: #fff;
 }
