--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -20,9 +20,8 @@ h2 {
   justify-content: center;
   align-items: center;
   margin-top: 10px;
+  color: #fff;
 }
-
-
 .position-submit {
   height: 50px;
 }
