--- a/public/css/style-callmember-vue.css
+++ b/public/css/style-callmember-vue.css
@@ -20,5 +20,10 @@ body{
 }
 .nome-member{
   font-size: 15px;
-
+}
+.nome-user-relacionada{
+  white-space: nowrap;
+  width: 170px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
