--- a/public/css/style-call-vue.css
+++ b/public/css/style-call-vue.css
@@ -20,8 +20,12 @@ body {
 
 .altura-title {
   margin-top: 25px;
+  font-size: 25px;
 }
+.input-chat{
 
+bottom: 0px;
+  }
 .well-chat {
   margin-top: 30px;
   height: 400px;
@@ -74,6 +78,7 @@ body {
   overflow: auto;
   overflow-x: hidden;
 }
+
 
 /*Small*/
 
