--- a/public/css/style-user-show.css
+++ b/public/css/style-user-show.css
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   padding: 0;
+  background-color: #fff;
 }
 
 p, h2{
@@ -18,7 +19,7 @@ p, h2{
   justify-content: center;
   width: 150px;
   height: 150px;
-  
+
 }
 .well-historico{
   margin-top: 20px;
