--- a/public/css/style-call-vue.css
+++ b/public/css/style-call-vue.css
@@ -14,6 +14,7 @@ body {
 
 .user-relacionado {
   margin: 10px 0px 10px 0px;
+  color: #000;
 }
 
 /*chat*/
@@ -21,6 +22,7 @@ body {
 .altura-title {
   margin-top: 25px;
   font-size: 25px;
+  color: #000;
 }
 .input-chat{
 
@@ -41,6 +43,7 @@ bottom: 0px;
   overflow: auto;
   overflow-x: hidden;
   background-color: #fff;
+  color: #000;
 }
 
 .user-assunto {
@@ -148,8 +151,17 @@ bottom: 0px;
   .well-pessoa {
     background-color: #fff;
   }
-  .btn-chamada {
+  .btn-chamada, .btn-chamada:hover, .btn-chamada:link {
     background-color: green;
     color: #fff;
+  }
+  .btn-chamada{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  .fa-comments-o{
+    padding-left: 5px;
   }
 }
