--- a/public/css/style-request-create.css
+++ b/public/css/style-request-create.css
@@ -4,6 +4,10 @@ body{
   background-color: #ffffff;
 }
 
+label, span, .title-agenda, .panel-heading{
+  color: #000;
+}
+
 .space-top{
   margin-top: 30px;
 }
