--- a/public/css/style-call-vue.css
+++ b/public/css/style-call-vue.css
@@ -59,6 +59,7 @@ margin-top: -18px;
   font-size: 25px;
 }
 
+
 .text-assunto:link, .text-assunto, .text-assunto:hover {
   text-decoration: none;
   color: #000;
@@ -74,6 +75,7 @@ margin-top: -18px;
 .trash-assunto {
   float: right;
   color: #000;
+  padding-top: 3px;
 }
 
 .trash-assunto:hover {
@@ -82,6 +84,7 @@ margin-top: -18px;
 
 #teste {
   margin-top: 15px;
+  padding-bottom: 10px;
 }
 
 .well-pessoa {
