--- a/public/css/style-auditorium-index.css
+++ b/public/css/style-auditorium-index.css
@@ -12,7 +12,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 80px;
+  margin-top: 40px;
 }
 
 .btn-position {
@@ -25,16 +25,16 @@ h2 {
 .position-submit {
   height: 50px;
 }
-
+/*
 .well {
   border: 2px solid #d3e0e9;
-}
-
+}*/
+/*
 .progress {
   margin-top: 50px;
   margin-bottom: 5px;
 }
-
+/*
 .disponivel, .pendente, .indisponivel {
   display: inline-block;
   color: #fff;
@@ -42,7 +42,7 @@ h2 {
   border-radius: 7%;
   padding-left: 5px;
 }
-
+/*
 .disponivel {
   background-color: green;
 }
@@ -54,7 +54,7 @@ h2 {
 .indisponivel {
   background-color: red;
 }
-
+*/
 .style-icons {
   color: #2a88bd;
   border: 3px solid #2a88bd;
@@ -73,9 +73,7 @@ h2 {
   margin-right: 10px;
   font-size: 40px;
 }
-.footer{
-  margin-top: 30px;
-}
+
 
 /*giro no disponivel*/
 
@@ -83,9 +81,7 @@ h2 {
 /*Small*/
 
 @media screen and (max-width: 767px) {
-  .well {
-    height: 260px;
-  }
+
   .input-date {
     width: 250px;
     height: 40px;
@@ -97,9 +93,7 @@ h2 {
 /*Tablet*/
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-  .well {
-    height: 260px;
-  }
+
   .input-date {
     width: 400px;
     height: 50px;
@@ -113,10 +107,7 @@ h2 {
 /*Computer*/
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
-  .well {
-    height: 260px;
-    font-family: 'Muli', sans-serif;
-  }
+
   .input-date {
     width: 400px;
     height: 50px;
@@ -128,10 +119,7 @@ h2 {
 /* > Computer*/
 
 @media screen and (min-width: 1200px) {
-  .well {
-    height: 260px;
-  font-family: 'Muli', sans-serif;
-  }
+
   .input-date {
     width: 400px;
     height: 50px;
