create event_row partial

--- a/public/css/style-auditorium-2-0.css
+++ b/public/css/style-auditorium-2-0.css
@@ -35,11 +35,25 @@
 .collapse{
 
 }
-.status-color{
+.status-color-green{
   height: 20px;
   width: 1px;
   margin-left: 0;
   background-color: green;
+}
+
+.status-color-orange{
+  height: 20px;
+  width: 1px;
+  margin-left: 0;
+  background-color: orange;
+}
+
+.status-color-red{
+  height: 20px;
+  width: 1px;
+  margin-left: 0;
+  background-color: red;
 }
 
 .status-color{
