--- a/public/css/style-auditorium-2-0.css
+++ b/public/css/style-auditorium-2-0.css
@@ -11,6 +11,10 @@
   height: 50px;
   margin-bottom: 3px;
 }
+.text-information{
+  color: red;
+  font-size: 16px;
+}
 .aud-name{
   padding: 0;
   color: black;
